--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProyectoOCR</title>
+  <title>Ocr</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:;">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
